--- a/Notebook/1.ipynb
+++ b/Notebook/1.ipynb
@@ -42,6 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read csv to dataframe\n",
     "df = spark.read \\\n",
     "    .format(\"csv\") \\\n",
     "    .option(\"header\", True) \\\n",
@@ -173,8 +174,8 @@
       "+-----------------+----------------+\n",
       "|month(order_date)|churn_count_flag|\n",
       "+-----------------+----------------+\n",
-      "|                1|               4|\n",
-      "|                2|               1|\n",
+      "|                1|               1|\n",
+      "|                2|               4|\n",
       "+-----------------+----------------+\n",
       "\n"
      ]
@@ -183,7 +184,7 @@
    "source": [
     "windowSpec_churn  = Window.partitionBy(\"cust_id\").orderBy(\"order_date\").rowsBetween(Window.currentRow,Window.unboundedFollowing)\n",
     "\n",
-    "df4 = df1.withColumn(\"churn_map\",count(\"order_id\").over(windowSpec)) \n",
+    "df4 = df1.withColumn(\"churn_map\",count(\"order_id\").over(windowSpec_churn)) \n",
     "\n",
     "df5 = df4.withColumn(\"churn_count_flag\",when(col(\"churn_map\")>1,0).otherwise(1))\n",
     "        \n",
