--- a/Notebook/1.ipynb
+++ b/Notebook/1.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cf3a084a",
+   "metadata": {},
+   "source": [
+    "Customer retention refers to the ability of a company or product to retain its \t\t\t\t\t\t\t\n",
+    "customers over some specified period. High customer retention means customers of\t\t\t\t\t\t\t\n",
+    "the product or business tend to return to, continue to buy or in some other way \t\t\t\t\t\t\t\n",
+    "not defect to another product or business, or to non-use entirely. \t\t\t\t\t\t\t\n",
+    "Company programs to retain customers: Zomato Pro , Cashbacks, Reward Programs etc.\t\t\t\t\t\t\t\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f90aa195",
