--- a/Spark Commands.ipynb
+++ b/Spark Commands.ipynb
@@ -1,25 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "e8b572ff",
+   "cell_type": "markdown",
+   "id": "a1f04818",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Import Libraries\n",
-    "from pyspark.sql import SparkSession"
+    "### Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
+   "id": "e8b572ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import *\n",
+    "from pyspark.sql.types import *\n",
+    "from pyspark.sql.window import Window"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd371fde",
+   "metadata": {},
+   "source": [
+    "### Create a spark session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "fac9bb50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a spark session\n",
-    "\n",
     "spark = SparkSession.builder\\\n",
     "        .appName(\"MySparkAppplication\")\\\n",
     "        .getOrCreate()\n",
@@ -27,8 +43,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "683ae8eb",
+   "metadata": {},
+   "source": [
+    "### Read CSV file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "d992c1a7",
    "metadata": {},
    "outputs": [
@@ -43,8 +67,6 @@
     }
    ],
    "source": [
-    "# Read CSV file\n",
-    "\n",
     "csv_path = 'C:\\\\Users\\\\ajith\\\\data_spark_operations\\\\file2.csv'\n",
     "\n",
     "df_csv = spark.read.format(\"csv\") \\\n",
@@ -57,8 +79,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e5aeb34",
+   "metadata": {},
+   "source": [
+    "### Read a JSON file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "8ca7cdfc",
    "metadata": {},
    "outputs": [
@@ -78,22 +108,28 @@
     }
    ],
    "source": [
-    "# Read a JSON file\n",
-    "\n",
     "json_path = \"C:\\\\Users\\\\ajith\\\\data_spark_operations\\\\file1.json\"\n",
     "\n",
     "df_json = spark.read.format(\"json\") \\\n",
     "         .option(\"multiline\",True) \\\n",
     "         .option(\"mode\",\"DROPMALFORMED\") \\\n",
-    "          .load(json_path)\n",
+    "         .load(json_path)\n",
     "df_json =  df_json.selectExpr(\"explode(people) as person\").select(\"person.*\")\n",
     "\n",
     "df_json.show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c2f3a53",
+   "metadata": {},
+   "source": [
+    "### Read a Parquet file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "134563a9",
    "metadata": {},
    "outputs": [
@@ -140,8 +176,6 @@
     }
    ],
    "source": [
-    "# Read a Parquet file\n",
-    "\n",
     "parquet_path = \"C:\\\\Users\\\\ajith\\\\data_spark_operations\\\\file3.parquet\"\n",
     "\n",
     "df_parquet = spark.read.format(\"parquet\") \\\n",
@@ -154,23 +188,172 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad2570b2",
+   "metadata": {},
+   "source": [
+    "### Operations on Dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
+   "id": "d427253e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-----------+--------------------+-----+\n",
+      "| age|Todays date|          First name| Flag|\n",
+      "+----+-----------+--------------------+-----+\n",
+      "|80.0| 2025-03-10|Mr. Algernon Henr...|Major|\n",
+      "|74.0| 2025-03-10|           Mr. Johan|Major|\n",
+      "|71.0| 2025-03-10|           Mr. Ramon|Major|\n",
+      "|71.0| 2025-03-10|        Mr. George B|Major|\n",
+      "|70.5| 2025-03-10|         Mr. Patrick|Major|\n",
+      "+----+-----------+--------------------+-----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter, WithColumn, If else(When)\n",
+    "\n",
+    "df_filter = df_parquet.filter(col(\"Sex\")==\"male\")\n",
+    "df_withCol = df_parquet.withColumn(\"Todays date\",current_date()) \\\n",
+    "                       .withColumn(\"First name\",trim(split(col(\"Name\"),\",\")[1])) \\\n",
+    "                       .withColumn(\"age\",when(col(\"age\").isNull(),lit(10)).otherwise(col(\"age\"))) \\\n",
+    "                       .withColumn(\"Flag\",when(col(\"age\")<25,\"Minor\").otherwise(\"Major\")) \\\n",
+    "                       .select(\"age\",\"`Todays date`\",\"`First name`\",\"Flag\") \\\n",
+    "                       .orderBy(col(\"age\").desc())\n",
+    "\n",
+    "df_withCol.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "02820934",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+---+\n",
+      "|   Sex|Cnt|\n",
+      "+------+---+\n",
+      "|  male|577|\n",
+      "|female|314|\n",
+      "+------+---+\n",
+      "\n",
+      "+-----+\n",
+      "|  age|\n",
+      "+-----+\n",
+      "|28.34|\n",
+      "+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Aggregate functions on dataframe\n",
+    "# Count of male and female\n",
+    "df_cnt = df_parquet.groupBy(\"Sex\").agg(count(\"PassengerId\").alias(\"Cnt\")).select(\"Sex\",\"Cnt\").orderBy(col(\"Sex\").desc())\n",
+    "df_cnt.show()\n",
+    "\n",
+    "# Total avg age for survived passengers\n",
+    "df_fare = df_parquet.filter(col(\"Survived\")==1).agg(round(avg(\"age\"),2).alias(\"age\")).select(\"*\")\n",
+    "df_fare.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "9e3b0d95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+----+----------+----+----------+\n",
+      "|   Sex| Age|row_number|rank|dense_rank|\n",
+      "+------+----+----------+----+----------+\n",
+      "|  male|0.42|         1|   1|         1|\n",
+      "|female|0.75|         1|   1|         1|\n",
+      "|female|0.75|         2|   1|         1|\n",
+      "|  male|0.67|         2|   2|         2|\n",
+      "|female| 1.0|         3|   3|         2|\n",
+      "+------+----+----------+----+----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Window functions\n",
+    "window = Window.partitionBy(\"Sex\").orderBy(\"age\")\n",
+    "\n",
+    "df_window = df_parquet.withColumn(\"age\",when(col(\"age\").isNull(),lit(10)).otherwise(col(\"age\"))) \\\n",
+    "                      .withColumn(\"row_number\",row_number().over(window)) \\\n",
+    "                      .withColumn(\"rank\",rank().over(window)) \\\n",
+    "                      .withColumn(\"dense_rank\",dense_rank().over(window)) \\\n",
+    "                      .select(\"Sex\",\"Age\",\"row_number\",\"rank\",\"dense_rank\") \\\n",
+    "                      .orderBy(col(\"row_number\").asc())\n",
+    "\n",
+    "df_window.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3297d011",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Joins\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "f5d8e801",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write dataframe as  file\n",
     "\n",
-    "df_parquet.coalesce(1).write.mode(\"overwrite\").format(\"csv\").save(\"C:\\\\Users\\\\ajith\\\\data_spark_operations\\\\parquet_file3.csv\")\n",
+    "df_parquet.coalesce(1).write \\\n",
+    "        .mode(\"overwrite\") \\\n",
+    "        .format(\"csv\") \\\n",
+    "        .save(\"C:\\\\Users\\\\ajith\\\\data_spark_operations\\\\parquet_file3.csv\")\n",
     "\n",
-    "df_parquet.repartition(10).write.mode(\"overwrite\").partitionBy(\"Sex\").format(\"parquet\").save(\"C:\\\\Users\\\\ajith\\\\data_spark_operations\\\\parquet_file3.parquet\")"
+    "df_parquet.repartition(10).write \\\n",
+    "        .mode(\"overwrite\") \\\n",
+    "        .partitionBy(\"Sex\").format(\"parquet\") \\\n",
+    "        .save(\"C:\\\\Users\\\\ajith\\\\data_spark_operations\\\\parquet_file3.parquet\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4362fdb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08ea5186",
    "metadata": {},
    "outputs": [],
    "source": []
