--- a/Spark Commands.ipynb
+++ b/Spark Commands.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a1f04818",
+   "id": "ddbb09d5",
    "metadata": {},
    "source": [
     "### Import Libraries"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd371fde",
+   "id": "d566d858",
    "metadata": {},
    "source": [
     "### Create a spark session"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "683ae8eb",
+   "id": "3586271a",
    "metadata": {},
    "source": [
     "### Read CSV file"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e5aeb34",
+   "id": "dafbb98e",
    "metadata": {},
    "source": [
     "### Read a JSON file"
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c2f3a53",
+   "id": "7b35cd77",
    "metadata": {},
    "source": [
     "### Read a Parquet file"
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "id": "134563a9",
    "metadata": {},
    "outputs": [
@@ -154,23 +154,8 @@
       "|          3|       1|     3|Heikkinen, Miss. ...|female|26.0|    0|    0|STON/O2. 3101282|  7.925| null|       S|\n",
       "|          4|       1|     1|Futrelle, Mrs. Ja...|female|35.0|    1|    0|          113803|   53.1| C123|       S|\n",
       "|          5|       0|     3|Allen, Mr. Willia...|  male|35.0|    0|    0|          373450|   8.05| null|       S|\n",
-      "|          6|       0|     3|    Moran, Mr. James|  male|null|    0|    0|          330877| 8.4583| null|       Q|\n",
-      "|          7|       0|     1|McCarthy, Mr. Tim...|  male|54.0|    0|    0|           17463|51.8625|  E46|       S|\n",
-      "|          8|       0|     3|Palsson, Master. ...|  male| 2.0|    3|    1|          349909| 21.075| null|       S|\n",
-      "|          9|       1|     3|Johnson, Mrs. Osc...|female|27.0|    0|    2|          347742|11.1333| null|       S|\n",
-      "|         10|       1|     2|Nasser, Mrs. Nich...|female|14.0|    1|    0|          237736|30.0708| null|       C|\n",
-      "|         11|       1|     3|Sandstrom, Miss. ...|female| 4.0|    1|    1|         PP 9549|   16.7|   G6|       S|\n",
-      "|         12|       1|     1|Bonnell, Miss. El...|female|58.0|    0|    0|          113783|  26.55| C103|       S|\n",
-      "|         13|       0|     3|Saundercock, Mr. ...|  male|20.0|    0|    0|       A/5. 2151|   8.05| null|       S|\n",
-      "|         14|       0|     3|Andersson, Mr. An...|  male|39.0|    1|    5|          347082| 31.275| null|       S|\n",
-      "|         15|       0|     3|Vestrom, Miss. Hu...|female|14.0|    0|    0|          350406| 7.8542| null|       S|\n",
-      "|         16|       1|     2|Hewlett, Mrs. (Ma...|female|55.0|    0|    0|          248706|   16.0| null|       S|\n",
-      "|         17|       0|     3|Rice, Master. Eugene|  male| 2.0|    4|    1|          382652| 29.125| null|       Q|\n",
-      "|         18|       1|     2|Williams, Mr. Cha...|  male|null|    0|    0|          244373|   13.0| null|       S|\n",
-      "|         19|       0|     3|Vander Planke, Mr...|female|31.0|    1|    0|          345763|   18.0| null|       S|\n",
-      "|         20|       1|     3|Masselmani, Mrs. ...|female|null|    0|    0|            2649|  7.225| null|       C|\n",
       "+-----------+--------+------+--------------------+------+----+-----+-----+----------------+-------+-----+--------+\n",
-      "only showing top 20 rows\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
@@ -183,13 +168,13 @@
     "\n",
     "display(df_parquet)\n",
     "\n",
-    "df_parquet.show()\n",
+    "df_parquet.show(5)\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ad2570b2",
+   "id": "5635f39e",
    "metadata": {},
    "source": [
     "### Operations on Dataframe"
@@ -198,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d427253e",
+   "id": "bae6f6e0",
    "metadata": {
     "scrolled": true
    },
@@ -238,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "02820934",
+   "id": "bfa250d6",
    "metadata": {
     "scrolled": true
    },
@@ -277,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "9e3b0d95",
+   "id": "41a6540f",
    "metadata": {},
    "outputs": [
     {
@@ -314,10 +299,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3297d011",
+   "execution_count": 74,
+   "id": "cbf8b7f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+-------+----------+----------+------+------+---------+--------------------+--------------------+--------------+--------------------+--------------+--------------+--------------+\n",
+      "|Series_reference| Period|Data_value|Suppressed|STATUS| UNITS|Magnitude|             Subject|               Group|Series_title_1|      Series_title_2|Series_title_3|Series_title_4|Series_title_5|\n",
+      "+----------------+-------+----------+----------+------+------+---------+--------------------+--------------------+--------------+--------------------+--------------+--------------+--------------+\n",
+      "|     BDCQ.SEA1AA|2011.06|   80078.0|      null|     F|Number|        0|Business Data Col...|Industry by emplo...|   Filled jobs|Agriculture, Fore...|        Actual|          null|          null|\n",
+      "|     BDCQ.SEA1AA|2011.09|   78324.0|      null|     F|Number|        0|Business Data Col...|Industry by emplo...|   Filled jobs|Agriculture, Fore...|        Actual|          null|          null|\n",
+      "|     BDCQ.SEA1AA|2011.12|   85850.0|      null|     F|Number|        0|Business Data Col...|Industry by emplo...|   Filled jobs|Agriculture, Fore...|        Actual|          null|          null|\n",
+      "|     BDCQ.SEA1AA|2012.03|   90743.0|      null|     F|Number|        0|Business Data Col...|Industry by emplo...|   Filled jobs|Agriculture, Fore...|        Actual|          null|          null|\n",
+      "|     BDCQ.SEA1AA|2012.06|   81780.0|      null|     F|Number|        0|Business Data Col...|Industry by emplo...|   Filled jobs|Agriculture, Fore...|        Actual|          null|          null|\n",
+      "+----------------+-------+----------+----------+------+------+---------+--------------------+--------------------+--------------+--------------------+--------------+--------------+--------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Joins\n"
    ]
@@ -353,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08ea5186",
+   "id": "1607b7d6",
    "metadata": {},
    "outputs": [],
    "source": []
